#592 - Corrected Alignment and Size of Date Picker Fields on Pricing Administration Page.

--- a/public/stylesheets/ie7.css
+++ b/public/stylesheets/ie7.css
@@ -17,4 +17,6 @@
 
 }
 
+.center{margin-left:100px; !important}
+
 
